changed html name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="image">
-        <img class="logo" src="../SDLCwebsite/images/large.png" alt="">
+        <img class="logo" src="images/large.png" alt="">
     </div>
 
     <section class="navbar">
@@ -39,12 +39,12 @@
             <li class="links link4">-Contanct info</li>
         </ul>
         <section class="drinks">
-            <li class="drink1 varietys"><img class="displayimg" src="../SDLCwebsite/images/large - Copy.png" alt="">Caramel</li>
-            <li class="drink2 varietys"><img class="displayimg" src="../SDLCwebsite/images/large - Copy.png" alt="">Mocha</li>
-            <li class="drink3 varietys"><img class="displayimg" src="../SDLCwebsite/images/large - Copy.png" alt="">Classic</li>
-            <li class="drink4 varietys"><img class="displayimg" src="../SDLCwebsite/images/large - Copy.png" alt="">Cinnamon</li>
-            <li class="drink5 varietys"><img class="displayimg" src="../SDLCwebsite/images/large - Copy.png" alt="">Pumkin Spice</li>
-            <li class="drink6 varietys"><img class="displayimg" src="../SDLCwebsite/images/large - Copy.png" alt="">Mystery Drink</li>
+            <li class="drink1 varietys"><img class="displayimg" src="images/large - Copy.png" alt="">Caramel</li>
+            <li class="drink2 varietys"><img class="displayimg" src="images/large - Copy.png" alt="">Mocha</li>
+            <li class="drink3 varietys"><img class="displayimg" src="images/large - Copy.png" alt="">Classic</li>
+            <li class="drink4 varietys"><img class="displayimg" src="images/large - Copy.png" alt="">Cinnamon</li>
+            <li class="drink5 varietys"><img class="displayimg" src="images/large - Copy.png" alt="">Pumkin Spice</li>
+            <li class="drink6 varietys"><img class="displayimg" src="images/large - Copy.png" alt="">Mystery Drink</li>
         </section>
     </section>
 </body>
